# cod-sync

./: .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  README.md  TODO.md  VERSIONING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
cod_sync/: __main__.py  _seed_data.py  alt_name.py  cli.py  cod.py  dfc.py  diff.py  errors.py  sourcetag.py
cod_sync/cli/: __init__.py  _state.py  apply.py  formatting.py  prompts.py  routing.py  sync.py  walk.py
cod_sync/sources/: __init__.py  _http.py  archidekt.py  manabox.py  moxfield.py  text.py  types.py
man/: cod-sync.1
scripts/: gen_manpage.py  refresh_seed.py
tests/: conftest.py  test_alt_name.py  test_alt_name_control.py  test_alt_name_perf.py  test_banner_canonical.py  test_bare_url.py  test_cod.py  test_dfc.py  test_diff.py  test_dispatch.py  test_ignore.py  test_import.py  test_info.py  test_main_module.py  test_manpage.py  test_mapping_control.py  test_multi_printing.py  test_quiet.py  test_smart_dispatch.py  test_source_alt_name.py  test_source_dfc.py  test_source_errors.py  test_source_manabox.py  test_source_tags.py  test_source_zones.py  test_sourcetag.py  test_summary_count.py  test_sync_file.py  test_text.py  test_version.py  test_walk.py
tests/fixtures/: bare.cod  manabox_deck.html  pinned.cod
tests/integration/: test_sources_network.py
