[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cod-sync"
version = "0.6.0"
description = "Sync a Cockatrice .cod decklist against Moxfield/Archidekt/text with an interactive diff."
requires-python = ">=3.10"
dependencies = ["requests>=2.31"]

[project.scripts]
cod-sync = "cod_sync.cli:main"

[tool.setuptools.packages.find]
include = ["cod_sync*"]
