[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cod-sync"
version = "0.11.2"
description = "Sync a Cockatrice .cod decklist against Moxfield/Archidekt/text with an interactive diff."
requires-python = ">=3.10"
dependencies = ["requests>=2.31"]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "mypy>=1.8",
    "types-requests",
    "ruff>=0.6",
    "pre-commit>=3.7",
]

[project.scripts]
cod-sync = "cod_sync.cli:main"

[tool.setuptools.packages.find]
include = ["cod_sync*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# Conservative starter set:
#   E/W = pycodestyle errors/warnings
#   F   = pyflakes
#   I   = isort
#   UP  = pyupgrade (py310+ idioms)
# Broaden incrementally; keep "zero violations" the bar for landing.
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# Generated artifact — refresh_seed.py rewrites this file mechanically.
"cod_sync/_seed_data.py" = ["E501", "I001"]

[tool.pytest.ini_options]
markers = [
    "network: opt-in tests that hit live third-party deck APIs; gated behind COD_SYNC_RUN_NETWORK_TESTS=1",
]

[tool.mypy]
python_version = "3.10"
files = ["cod_sync", "tests"]
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
disable_error_code = ["union-attr", "func-returns-value", "type-arg", "attr-defined"]
